Comecei a anotação do art. 30

--- a/anotacao.org
+++ b/anotacao.org
@@ -38,36 +38,36 @@ Artigo 29.º \\
 
 *** I - Antecedentes legislativos
 
-*1.* O artigo 16.º da Proposta estabelecia que as disposições adicionais aplicáveis aos fornecedores de plataformas em linha não seriam aplicáveis aos fornecedores que fossem considerados micro ou pequenas empresas na aceção do anexo da Recomendação 2003/361/CE, excecção semelhante à que veio a ser consagrada neste preceito.
+O artigo 16.º da Proposta estabelecia que as disposições adicionais aplicáveis aos fornecedores de plataformas em linha não seriam aplicáveis aos fornecedores que fossem considerados micro ou pequenas empresas na aceção do anexo da Recomendação 2003/361/CE, excecção semelhante à que veio a ser consagrada neste preceito.
 
-*2.* Comparando o artigo 16.º da Proposta e o artigo 29.º do RSD, este último introduz /(i)/ um período de transição de 12 meses nos casos em que o fornecedor de plataforma em linha perca o estatuto de micro ou pequena empresa e /(ii)/ um recorte da exclusão subjetiva esclarecendo que as disposições adicionais aplicáveis aos fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes são sempre aplicáveis quando se trate de plataformas em linha de muito grande dimensão.
+Comparando o artigo 16.º da Proposta e o artigo 29.º do RSD, este último introduz /(i)/ um período de transição de 12 meses nos casos em que o fornecedor de plataforma em linha perca o estatuto de micro ou pequena empresa e /(ii)/ um recorte da exclusão subjetiva esclarecendo que as disposições adicionais aplicáveis aos fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes são sempre aplicáveis quando se trate de plataformas em linha de muito grande dimensão.
 
-*3.* O recorte da exclusão subjetiva foi introduzido pelo Parlamento Europeu e pelo Conselho[fn:1]. O período de transição surge mais tarde no processo legislativo, na sequência de negociações interinstitucionais entre o Parlamento Europeu, o Conselho e a Comissão Europeia[fn:2]. No final do processo legislativo, dividiu-se a secção 3 da Proposta (que inicia no artigo 16.º) nas atuais secção 3, relativa às disposições adicionais aplicáveis aos fornecedores de plataformas em linha (artigos 19.º a 28.º do RSD) e secção 4, relativa às disposições adicionais aplicáveis aos fornecedores de plataformas em linha que permitem aos consumidores celebrar
+O recorte da exclusão subjetiva foi introduzido pelo Parlamento Europeu e pelo Conselho[fn:1]. O período de transição surge mais tarde no processo legislativo, na sequência de negociações interinstitucionais entre o Parlamento Europeu, o Conselho e a Comissão Europeia[fn:2]. No final do processo legislativo, dividiu-se a secção 3 da Proposta (que inicia no artigo 16.º) nas atuais secção 3, relativa às disposições adicionais aplicáveis aos fornecedores de plataformas em linha (artigos 19.º a 28.º do RSD) e secção 4, relativa às disposições adicionais aplicáveis aos fornecedores de plataformas em linha que permitem aos consumidores celebrar
 contratos à distância com comerciantes (artigos 29.º a 32.º do RSD). Tal motivou uma retificação da posição adotada em primeira leitura pelo Parlamento Europeu em 5 de julho de 2022, na qual se inseriu o atual artigo 29.º do RSD[fn:3].
 
 *** II - Ponderação de interesses
 
-*4.* O artigo 29.º é o resultado da procura de um equilíbrio entre dois interesses: a proteção dos consumidores e o apoio e desenvolvimento das micro, pequenas e médias empresas da União Europeia. Ambos se encontram consagrados no TFUE: a proteção dos consumidores nos artigos 12.º e 169.º e o apoio e desenvolvimentos das pequanas e médias empresas nos artigos 153.º, n.º 2, al. /b)/, e 173.º, n.º 1, 2.º travessão.
+O artigo 29.º é o resultado da procura de um equilíbrio entre dois interesses: a proteção dos consumidores e o apoio e desenvolvimento das micro, pequenas e médias empresas da União Europeia. Ambos se encontram consagrados no TFUE: a proteção dos consumidores nos artigos 12.º e 169.º e o apoio e desenvolvimentos das pequanas e médias empresas nos artigos 153.º, n.º 2, al. /b)/, e 173.º, n.º 1, 2.º travessão.
 
-*5.* A isenção subjetiva a favor das micro e pequenas empresas visa evitar encargos desproporcionados[fn:4], pois as empresas de menor dimensão poderão não conseguir suportar os custos de /compliance/ com todas as obrigações definidas no RSD e acabariam prejudicadas por um instrumento que visa também proporcionar-lhes condições de concorrência equitativas[fn:5]. As micro e pequenas empresas beneficiam de outras isenções subjetivas nos artigos 15.º, n.º 2, e 19.º do RSD, prevendo-se no artigo 91.º, n.º 2, al. /d)/, do RSD a revisão destas isenções até 17 de novembro de 2027 e a partir daí quinquenalmente. Salienta-se que o legislador europeu entendeu que as obrigações estabelecidas pelo RSD não constituem encargos desproporcionados para as médias empresas e, em contraponto, estabeleceu obrigações específicas dos prestadores de mercados em linha relacionadas com a segurança dos produtos, sem consagrar qualquer exceção para as micro e pequenas empresas no Regulamento (UE) 2023/988 relativo à segurança geral dos produtos[fn:6].
+A isenção subjetiva a favor das micro e pequenas empresas visa evitar encargos desproporcionados[fn:4], pois as empresas de menor dimensão poderão não conseguir suportar os custos de /compliance/ com todas as obrigações definidas no RSD e acabariam prejudicadas por um instrumento que visa também proporcionar-lhes condições de concorrência equitativas[fn:5]. As micro e pequenas empresas beneficiam de outras isenções subjetivas nos artigos 15.º, n.º 2, e 19.º do RSD, prevendo-se no artigo 91.º, n.º 2, al. /d)/, do RSD a revisão destas isenções até 17 de novembro de 2027 e a partir daí quinquenalmente. Salienta-se que o legislador europeu entendeu que as obrigações estabelecidas pelo RSD não constituem encargos desproporcionados para as médias empresas e, em contraponto, estabeleceu obrigações específicas dos prestadores de mercados em linha relacionadas com a segurança dos produtos, sem consagrar qualquer exceção para as micro e pequenas empresas no Regulamento (UE) 2023/988 relativo à segurança geral dos produtos[fn:6].
 
 *** III - Interpretação da norma
-*6. Conceitos.* Os conceitos mais relevantes do artigo 29.º são, por um lado, os conceitos de "consumidor", "comerciante", "plataforma em linha", "contrato à distância" e "plataforma em linha de muito grande dimensão" definidos, respetivamente, nos artigos 3.º, e 33.º, n.ºs 1 e 4, para os quais se remete e, por outro, os conceitos de micro e pequena empresa, definidos na Recomendação 2003/361/CE[fn:7].
+*1. Conceitos.* Os conceitos mais relevantes do artigo 29.º são, por um lado, os conceitos de "consumidor", "comerciante", "plataforma em linha", "contrato à distância" e "plataforma em linha de muito grande dimensão" definidos, respetivamente, nos artigos 3.º, e 33.º, n.ºs 1 e 4, para os quais se remete e, por outro, os conceitos de micro e pequena empresa, definidos na Recomendação 2003/361/CE[fn:7].
 
-*7.* Estes conceitos efetuam o recorte subjetivo de quem está sujeito às disposições adicionais consagradas na secção IV do capítulo III e de quem beneficia da exclusão prevista no artigo 29.º. Assim, e por exemplo, o fornecedor de plataforma em linha que /ou/ não permita a celebração de contratos à distância /ou/ só permita a celebração de contratos à distância entre comerciantes não está obrigado a cumprir as disposições adicionais consagradas na secção IV do capítulo III. Por outro lado, o fornecedor de plataforma em linha que permita a celebração de contratos à distância com consumidores /e/ que seja considerado uma micro ou pequena empresa na aceção da Recomendação 2003/361/CE beneficia da exclusão consagrada no artigo 29.º, n.º 1, /exceto se/ a sua plataforma em linha for designada como uma plataforma de muito grande dimensão (artigo 29.º, n.º 2).
+Estes conceitos efetuam o recorte subjetivo de quem está sujeito às disposições adicionais consagradas na secção IV do capítulo III e de quem beneficia da exclusão prevista no artigo 29.º. Assim, e por exemplo, o fornecedor de plataforma em linha que /ou/ não permita a celebração de contratos à distância /ou/ só permita a celebração de contratos à distância entre comerciantes não está obrigado a cumprir as disposições adicionais consagradas na secção IV do capítulo III. Por outro lado, o fornecedor de plataforma em linha que permita a celebração de contratos à distância com consumidores /e/ que seja considerado uma micro ou pequena empresa na aceção da Recomendação 2003/361/CE beneficia da exclusão consagrada no artigo 29.º, n.º 1, /exceto se/ a sua plataforma em linha for designada como uma plataforma de muito grande dimensão (artigo 29.º, n.º 2).
 
-*8. Conceitos de micro e pequena empresa.* O conceito de empresa abrange "qualquer entidade que, independentemente da sua forma jurídica, exerce uma actividade econó-
+*2. Conceitos de micro e pequena empresa.* O conceito de empresa abrange "qualquer entidade que, independentemente da sua forma jurídica, exerce uma actividade econó-
 mica."[fn:10] Uma micro empresa "é definida como uma empresa que emprega menos de 10 pessoas e cujo volume de negócios anual ou balanço total anual não excede 2 milhões de euros."[fn:8] Uma pequena empresa "é definida como uma empresa que emprega menos de 50 pessoas e cujo volume de negócios anual ou balanço total anual não excede 10 milhões de euros."[fn:9] Atende-se também às relações entre empresas para efeitos de apuramento destes critérios, classificando as empresas como autónomas, parceiras ou associadas[fn:11] e esclarecendo que uma empresa não pode ser considerada uma pequena ou média empresa "se 25% ou mais do seu capital ou dos seus direitos de voto forem controlados, directa ou indirectamente, por uma ou várias colectividades públicas ou organismos públicos, a título individual ou conjuntamente."[fn:12] A Recomendação estabelece ainda os dados a considerar para cálculo dos efetivos e dos montantes financeiros[fn:13].
 
-De acordo com o TJUE, o conceito de micro, pequenas e médias empresas (PME) da Recomendação 2003/361/CE deve ser objeto de interpretação estrita, pois as vantagens concedidas às PME constituem, muitas vezes, exceções às regras gerais[fn:14][cite:@hofmann2023;art. 29.º, n.º 7, defendem que a interpretação não deve ser estrita, mas sim tendo em conta a sua função específica].
+De acordo com o TJUE, o conceito de micro, pequenas e médias empresas (PME) da Recomendação 2003/361/CE deve ser objeto de interpretação estrita, pois as vantagens concedidas às PME constituem, muitas vezes, exceções às regras gerais[fn:14][cite:@hofmann2023 art. 29.º, n.º 7, defendem que a interpretação não deve ser estrita, mas sim tendo em conta a sua função específica].
 
-*10. Não aplicabilidade das disposições da presente secção*. Beneficiam da não aplicabilidade desta secção todos os fornecedores de plataformas em linha que permitam a celebração de contratos à distância com consumidores que sejam, na aceção da Recomendação 2003/361/CE, uma micro ou uma pequena empresa (artigo 29.º, n.º 1, 1.º parágrafo do RSD). Como a exclusão abrange as micro e as pequenas empresas, bastará cumprir os critérios definidos na recomendação para estas últimas para beneficiar da exclusão.[cite:Cf., no mesmo sentido, @hofmann2023;art. 29.º, n.º 10]
+*3. Não aplicabilidade das disposições da presente secção*. Beneficiam da não aplicabilidade desta secção todos os fornecedores de plataformas em linha que permitam a celebração de contratos à distância com consumidores que sejam, na aceção da Recomendação 2003/361/CE, uma micro ou uma pequena empresa (artigo 29.º, n.º 1, 1.º parágrafo do RSD). Como a exclusão abrange as micro e as pequenas empresas, bastará cumprir os critérios definidos na recomendação para estas últimas para beneficiar da exclusão.[cite:Cf., no mesmo sentido, @hofmann2023 art. 29.º, n.º 10]
 
-Sendo a exclusão um benefício concedido aos os fornecedores de plataformas em linha que permitam a celebração de contratos à distância com consumidores que sejam, na aceção da Recomendação 2003/361/CE, uma micro ou uma pequena empresa, nada impede que estes voluntariamente cumpram uma ou mais das obrigações previstas nesta secção[cite:Cf., considerando n.º 57 do RSD e @muller-terpitz2023;art. 29.º, n.º 6].
+Sendo a exclusão um benefício concedido aos os fornecedores de plataformas em linha que permitam a celebração de contratos à distância com consumidores que sejam, na aceção da Recomendação 2003/361/CE, uma micro ou uma pequena empresa, nada impede que estes voluntariamente cumpram uma ou mais das obrigações previstas nesta secção[cite:Cf., considerando n.º 57 do RSD e @muller-terpitz2023 art. 29.º, n.º 6].
 
-*11. Perda de estatuto de micro ou pequena empresa*. Caso o fornecedor deixe de preencher os critérios para ser considerado, pelo menos, uma pequena empresa na aceção da Recomendação 2003/361/CE, ele beneficia de um período de 12 meses contados a partir da data em que perdeu o estatuto de micro ou pequena empresa (artigo 29.º, n.º 1, 2.º parágrafo). Uma empresa perde o estatuto de micro ou pequena empresa se, numa base anual, superar o limiar de efetivos e ou os limiares financeiros /e/ se tal se repetir durante dois exercícios consecutivos[fn:15]. Perdido o estatuto de micro ou pequena empresa, o fornecedor só terá a obrigação de cumprir com as normas da presente secção passados 12 meses. Este período de transição compreende-se como força de mitigar os encargos inerentes ao cumprimento das obrigações desta secção.
+*4. Perda de estatuto de micro ou pequena empresa*. Caso o fornecedor deixe de preencher os critérios para ser considerado, pelo menos, uma pequena empresa na aceção da Recomendação 2003/361/CE, ele beneficia de um período de 12 meses contados a partir da data em que perdeu o estatuto de micro ou pequena empresa (artigo 29.º, n.º 1, 2.º parágrafo). Uma empresa perde o estatuto de micro ou pequena empresa se, numa base anual, superar o limiar de efetivos e ou os limiares financeiros /e/ se tal se repetir durante dois exercícios consecutivos[fn:15]. Perdido o estatuto de micro ou pequena empresa, o fornecedor só terá a obrigação de cumprir com as normas da presente secção passados 12 meses. Este período de transição compreende-se como força de mitigar os encargos inerentes ao cumprimento das obrigações desta secção.
 
-*12. Fornecedores de plataformas em linha de muito grande dimensão*. Os fornecedores de plataformas em linha que permitam a celebração de contratos à distância que tenham sido designadas como plataformas em linha de muito grande dimensão (cf. artigo 33.º e ss.) não beneficiam da exclusão (artigo 29.º, n.º 2, do RSD) nem do período de transição em caso de perda do estatuto de micro ou pequena empresa (artigo 29.º, n.º 1, 2.º parágrafo, /in fine/, do RSD). Considerando o maior alcance e impacto das plataformas em linha de muito grande dimensão (que têm um número médio mensal de destinatários activos do serviços na União Europeia igual ou superior a 45 milhões), o legislador considerou que o valor da proteção dos consumidores deve prevalecer sobre o apoio às micro e pequenas empresas, razão pela qual mesmo que o fornecedor da plataforma em linha de muito grande dimensão seja uma micro ou pequena empresa, na aceção da Recomendação 2003/361/CE, ele encontra-se obrigado ao cumprimento das disposições da presente secção.
+*5. Fornecedores de plataformas em linha de muito grande dimensão*. Os fornecedores de plataformas em linha que permitam a celebração de contratos à distância que tenham sido designadas como plataformas em linha de muito grande dimensão (cf. artigo 33.º e ss.) não beneficiam da exclusão (artigo 29.º, n.º 2, do RSD) nem do período de transição em caso de perda do estatuto de micro ou pequena empresa (artigo 29.º, n.º 1, 2.º parágrafo, /in fine/, do RSD). Considerando o maior alcance e impacto das plataformas em linha de muito grande dimensão (que têm um número médio mensal de destinatários activos do serviços na União Europeia igual ou superior a 45 milhões), o legislador considerou que o valor da proteção dos consumidores deve prevalecer sobre o apoio às micro e pequenas empresas, razão pela qual mesmo que o fornecedor da plataforma em linha de muito grande dimensão seja uma micro ou pequena empresa, na aceção da Recomendação 2003/361/CE, ele encontra-se obrigado ao cumprimento das disposições da presente secção.
 
 Caso o fornecedor seja uma micro ou pequena empresa, na aceção da Recomendação 2003/361/CE, e a sua plataforma em linha que permite a celebração de contratos à distância seja designada pela Comissão Europeia como uma plataforma em linha de muito grande dimensão pode questionar-se a partir de que data devem ser cumpridas as disposições previstas nos artigos 30.º a 32.º do RSD. Resulta do artigo 33.º, n.º 6, 2.º parágrafo, do RSD que as obrigações adicionais dos fornecedores de plataformas em linha de muito grande dimensão e de motores de pesquisa em linha de muito grande dimensão no que se refere à gestão de riscos sistémicos (secção 5 do capítulo III) são aplicáveis no prazo de quatro meses após a notificação da designação ao fornecedor. Nada se prevê, porém, quanto à data em que são aplicáveis as disposições adicionais aplicáveis aos fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes (secção 4 do capítulo III). Parecem possíveis duas interpretações: a primeira, mais literal, é a de que as disposições da presente secção são aplicáveis a partir da data da notificação ao fornecedor da designação da sua plataforma como uma plataforma em linha de muito grande dimensão; a segunda é a de que as disposições da presente secção são aplicáveis 4 meses após a notificação ao fornecedor da designação da plataforma como plataforma em linha de muito grande dimensão, aplicando analogicamente o prazo previsto no artigo 33.º, n.º 6, 2.º parágrafo do RSD. Parece-nos que esta segunda opção é mais consentânea com a ponderação de interesses subjacente a esta secção. Considerando o teor das obrigações previstas nos artigos 30.º a 32.º do RSD, a caracterização do fornecedor como micro ou pequena empresa na aceção da Recomendação 2003/361/CE e a classificação como plataforma em linha de muito grande dimensão depender de uma decisão da Comissão Europeia, parece adequado o prazo de quatro meses para o fornecedor assegurar o cumprimento das obrigações previstas na presente secção.
 
@@ -87,7 +87,7 @@ Artigo 30.º \\
 2.   Ao receber as informações a que se refere o n.º 1, e antes de permitir que o comerciante em causa utilize os seus serviços, o fornecedor da plataforma em linha que permite aos consumidores celebrar contratos à distância com comerciantes deve, seja através da utilização de uma base de dados oficial em linha ou interface em linha de acesso livre, disponibilizada por um Estado-Membro ou pela União, seja através da apresentação de pedidos ao comerciante para fornecer documentos comprovativos provenientes de fontes fiáveis, envidar todos os esforços para avaliar se as informações referidas no n.º 1, alíneas a) a e), são fiáveis e completas. Para efeitos do presente regulamento, os comerciantes são responsáveis pela exatidão das informações prestadas.
 
    No que diz respeito aos comerciantes que já utilizam os serviços de fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes para os fins referidos no n.º 1 em 17 de fevereiro de 2024, os fornecedores envidam todos os esforços para obter dos comerciantes em causa as informações referidas na lista no prazo de 12 meses. Se os comerciantes em causa não fornecerem as informações dentro deste prazo, os fornecedores suspendem o fornecimento dos seus serviços a tais comerciantes até que estes tenham fornecido todas as informações.
-3.   Se o fornecedor da plataforma em linha que permite aos consumidores celebrar contratos à distância com comerciantes obtiver indicações suficientes de que qualquer informação a que se refere o n.o 1 obtida do comerciante em causa é inexata, está incompleta ou não está atualizada, ou se tiver motivos para o supor, esse fornecedor solicita ao comerciante que corrija a situação, sem demora ou no prazo fixado pelo direito da União e nacional.
+3.   Se o fornecedor da plataforma em linha que permite aos consumidores celebrar contratos à distância com comerciantes obtiver indicações suficientes de que qualquer informação a que se refere o n.º 1 obtida do comerciante em causa é inexata, está incompleta ou não está atualizada, ou se tiver motivos para o supor, esse fornecedor solicita ao comerciante que corrija a situação, sem demora ou no prazo fixado pelo direito da União e nacional.
 
    Se o comerciante não corrigir ou completar essas informações, o prestador de plataformas em linha que permite aos consumidores celebrar contratos à distância com comerciantes suspende rapidamente a prestação do seu serviço a esse comerciante em relação à oferta de produtos ou de serviços aos consumidores localizados na União até que o pedido tenha sido plenamente satisfeito.
 4.   Sem prejuízo do disposto no artigo 4.º do Regulamento (UE) 2019/1150, caso um fornecedor de uma plataforma em linha que permite aos consumidores celebrar contratos à distância com comerciantes se recuse a autorizar um comerciante a utilizar o seu serviço nos termos do n.º 1 do presente artigo, ou suspenda a sua prestação nos termos do n.º 3 do presente artigo, o comerciante em causa tem o direito de apresentar uma reclamação nos termos dos artigos 20.º e 21.º do presente regulamento.
@@ -97,6 +97,24 @@ Artigo 30.º \\
 
 ** Bibliografia :ignore:
 ** Comentário
+*** I - Antecedentes legislativos
+A Proposta, no seu artigo 22.º, previa um regime de rastreabilidade dos comerciantes, o qual parece ter origem numa crítica ao modo como foi aplicado o artigo 5.º da DCE[fn:16]. No decurso do processo legislativo, o artigo 22.º da Proposta foi objeto de alterações, destacando-se o aditamento de uma disposição transitória (n.º 2, 2.º parágrafo), o ajustamento do dever de verificar as informações recebidas a cargo do fornecedor, precisando que este não é responsável pela exatidão das informações (n.º 2, 1.º parágrafo), o alargamento do prazo de conservação dos dados (n.º 5) e o desenvolvimento da número relativo à conceção e organização da plataforma em linha naquele que é atualmente o artigo 31.º do RSD.
+
+*** II - Teleologia da norma
+O objetivo desta norma é "(...) contribuir para um ambiente em linha seguro, fiável e transparente para os consumidores, bem como para outras partes interessadas, como comerciantes concorrentes e titulares de direitos de propriedade intelectual (...)"[fn:17]. A norma opera com base no princípio /Know Your Business Customer/[cite:Cf., neste sentido, @hofmann2023 art. 30.º, nº 1;@muller-terpitz2023 art. 30.º, n.º 2]. Os fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes devem recolher e disponibilizar informação sobre os comerciantes, antes de os autorizarem a dirigirem, através da plataforma em linha, a sua atividade aos consumidores localizados na União Europeia. A informação recolhida permitirá rastrear os comerciantes, promovendo a transparência e melhorando a proteção dos consumidores e de outras partes interessadas. Espera-se também que dissuada os comerciantes de venderem produtos ou serviços em violação das regras aplicáveis[fn:18].
+
+*** III - Âmbito de aplicação
+*1. Âmbito de aplicação subjetivo*. O artigo 30.º é aplicável aos fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes que não beneficiem da isenção prevista no artigo 29.º. Na concretização dos destinatários da norma são relevantes os conceitos de "consumidor", "comerciante", "plataforma em linha", e "contrato à distância" definidos no artigo 3.º, e para o qual se remete. O conceito de "plataformas em linha que permitem aos consumidores celebrar contratos à distância" é muito próximo do conceito de "mercado em linha"[fn:19], mas não inclui as plataformas que apoenas permitem a celebração de contratos entre consumidores. Assinala-se que apesar de o conceito de "comerciante" se encontrar definido no artigo 3.º, o considerando n.º 72 indica que "(...) qualquer comerciante, independentemente de ser uma pessoa singular ou coletiva, identificado como tal com base no artigo 6.º-A, n.º 1, alínea /b)/, da Diretiva 2011/83/UE e no artigo 7.º, n.º 4, alínea /f)/, da Diretiva 2005/29/CE, deverá ser rastreável quando oferece um produto ou serviço através de uma plataforma em linha."
+
+*2. Âmbito de aplicação material*.
+
+*3. Âmbito de aplicação espacial*. A obrigação imposta neste artigo aos fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes está limitada em função do âmbito de aplicação espacial do RSD, definido no art. 2.º, para o qual se remete. Deste modo, se o comerciante não prestar as informações mencionados no n.º 1 ou se não as corrigir ou atualizar dentro do prazo fixado no n.º 3, o fornecedor da plataforma tem o dever de, respetivamente, (i) não autorizar ou (ii) suspender a utilização da plataforma pelo comerciante para promover mensagens ou oferecer produtos ou serviços /apenas aos consumidores localizados na União Europeia/. Tal significa que nestes casos o fornecedor cumpre o artigo 30.º se recusar a autorização ou suspender a utilização da sua plataforma pelo comerciante apenas aos consumidores localizados na União Europeia, por exemplo, através do mecanismo de bloqueio geogrático, permitindo que o comerciante continue a usar a plataforma para dirigir a sua atividade aos consumidores localizados fora da União Europeia[cite:Cf., no mesmo sentido, @hofmann2023, art. 30.º, n.º 12].
+
+*** IV -
+
+
+
+
 * Anotação artigo 31.º :ignore:
 ** Trascrição do artigo :ignore:
 #+BEGIN_CENTER
@@ -115,6 +133,7 @@ Artigo 31.º \\
 
 ** Bibliografia :ignore:
 ** Comentário
+
 * Anotação artigo 32.º :ignore:
 ** Transcrição do artigo :ignore:
 #+BEGIN_CENTER
@@ -134,6 +153,15 @@ Artigo 32.º \\
 ** Comentário
 
 * Footnotes
+
+[fn:19] Introduzido pela Diretiva (UE) 2019/2161 do Parlamento Europeu e do Conselho de 27 de novembro de 2019 que altera a Diretiva 93/13/CEE do Conselho e as Diretivas 98/6/CE, 2005/29/CE e 2011/83/UE do Parlamento Europeu e do Conselho a fim de assegurar uma melhor aplicação e a modernização das regras da União em matéria de defesa dos consumidores, publicada no JO L 328 de 18 de dezembro de 2019.
+
+[fn:18] Considerando n.º 72.
+
+[fn:17] Considerando n.º 72.
+
+[fn:16] Cf. Parecer da Comissão da Cultura e da Educação, ponto 7, constante do Relatório que contém recomendações à Comissão sobre o Ato legislativo sobre os
+serviços digitais: Melhorar o funcionamento do mercado único (2020/2018(INL)), de 7.10.2020 e [cite:@hofmann2023 art. 30.º, n.º 7]
 
 [fn:15] Cf. artigo 4.º, n.º 2, do Anexo da Recomendação 2003/361/CE.
 
